--- a/JavaScript/02Blackjack/index.html
+++ b/JavaScript/02Blackjack/index.html
@@ -45,6 +45,10 @@
     </div>
 
     <script src="assets/js/underscore-min.js"></script>
-    <script src="assets/js/juego.js"></script>
+    <script src="assets/js/juego-min.js"></script>
+
+    <script>
+        miModulo.JuegoNuevo();
+    </script>
 </body>
 </html>
