--- a/JavaScript/01Fundamentos/index2.html
+++ b/JavaScript/01Fundamentos/index2.html
@@ -10,7 +10,10 @@
     <p>
         Texto Muestra
     </p>
-<!--     <scrip src="assets/js/classes/problema.js"></scrip>
- -->    <script src="assets/js/classes/sub-classes.js"></script>
+<!--     <scrip src="assets/js/classes/problema.js"></scrip> -->   
+<!--  <script src="assets/js/classes/sub-classes.js"></script> -->
+<!--     <script src="assets/js/classes/ESNext.js"></script> -->
+<!--     <script src="assets/js/classes/singleton.js"></script>
+ -->    <script src="assets/js/classes/constructores-multiples.js"></script>
 </body>
 </html>
